@@ -67,9 +67,9 @@ name|apache
 operator|.
 name|cayenne
 operator|.
-name|di
+name|log
 operator|.
-name|Provider
+name|NoopJdbcEventLogger
 import|;
 end_import
 
@@ -81,9 +81,9 @@ name|apache
 operator|.
 name|cayenne
 operator|.
-name|log
+name|query
 operator|.
-name|NoopJdbcEventLogger
+name|ObjectSelect
 import|;
 end_import
 
@@ -189,6 +189,18 @@ name|junit
 operator|.
 name|Assert
 operator|.
+name|assertEquals
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
 name|assertFalse
 import|;
 end_import
@@ -214,30 +226,6 @@ operator|.
 name|Assert
 operator|.
 name|assertSame
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|mockito
-operator|.
-name|Mockito
-operator|.
-name|mock
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|mockito
-operator|.
-name|Mockito
-operator|.
-name|when
 import|;
 end_import
 
@@ -267,45 +255,19 @@ specifier|public
 name|void
 name|testGetAdapter_Proxy
 parameter_list|()
-throws|throws
-name|Exception
 block|{
-name|Provider
-argument_list|<
-name|DbAdapter
-argument_list|>
-name|adapterProvider
-init|=
-name|mock
-argument_list|(
-name|Provider
-operator|.
-name|class
-argument_list|)
-decl_stmt|;
-name|when
-argument_list|(
-name|adapterProvider
-operator|.
-name|get
-argument_list|()
-argument_list|)
-operator|.
-name|thenReturn
-argument_list|(
-name|dataNode
-operator|.
-name|getAdapter
-argument_list|()
-argument_list|)
-expr_stmt|;
 name|AutoAdapter
 name|adapter
 init|=
 operator|new
 name|AutoAdapter
 argument_list|(
-name|adapterProvider
+parameter_list|()
+lambda|->
+name|dataNode
+operator|.
+name|getAdapter
+argument_list|()
 argument_list|,
 name|NoopJdbcEventLogger
 operator|.
@@ -339,42 +301,18 @@ name|void
 name|testCreateSQLTemplateAction
 parameter_list|()
 block|{
-name|Provider
-argument_list|<
-name|DbAdapter
-argument_list|>
-name|adapterProvider
-init|=
-name|mock
-argument_list|(
-name|Provider
-operator|.
-name|class
-argument_list|)
-decl_stmt|;
-name|when
-argument_list|(
-name|adapterProvider
-operator|.
-name|get
-argument_list|()
-argument_list|)
-operator|.
-name|thenReturn
-argument_list|(
-name|dataNode
-operator|.
-name|getAdapter
-argument_list|()
-argument_list|)
-expr_stmt|;
 name|AutoAdapter
 name|autoAdapter
 init|=
 operator|new
 name|AutoAdapter
 argument_list|(
-name|adapterProvider
+parameter_list|()
+lambda|->
+name|dataNode
+operator|.
+name|getAdapter
+argument_list|()
 argument_list|,
 name|NoopJdbcEventLogger
 operator|.
@@ -405,9 +343,8 @@ argument_list|,
 name|dataNode
 argument_list|)
 decl_stmt|;
-comment|// it is important for SQLTemplateAction to be used with unwrapped
-comment|// adapter, as the
-comment|// adapter class name is used as a key to the correct SQL template.
+comment|// it is important for SQLTemplateAction to be used with unwrapped adapter,
+comment|// as the adapter class name is used as a key to the correct SQL template.
 name|assertNotNull
 argument_list|(
 name|action
@@ -436,6 +373,292 @@ argument_list|,
 name|action
 operator|.
 name|getAdapter
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testCorrectProxyMethods
+parameter_list|()
+block|{
+name|DbAdapter
+name|adapter
+init|=
+name|dataNode
+operator|.
+name|getAdapter
+argument_list|()
+decl_stmt|;
+name|AutoAdapter
+name|autoAdapter
+init|=
+operator|new
+name|AutoAdapter
+argument_list|(
+parameter_list|()
+lambda|->
+name|adapter
+argument_list|,
+name|NoopJdbcEventLogger
+operator|.
+name|getInstance
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|ObjectSelect
+argument_list|<
+name|Artist
+argument_list|>
+name|select
+init|=
+name|ObjectSelect
+operator|.
+name|query
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+comment|// query related methods
+name|assertEquals
+argument_list|(
+name|adapter
+operator|.
+name|supportsBatchUpdates
+argument_list|()
+argument_list|,
+name|autoAdapter
+operator|.
+name|supportsBatchUpdates
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|adapter
+operator|.
+name|supportsGeneratedKeys
+argument_list|()
+argument_list|,
+name|autoAdapter
+operator|.
+name|supportsGeneratedKeys
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|adapter
+operator|.
+name|supportsGeneratedKeysForBatchInserts
+argument_list|()
+argument_list|,
+name|autoAdapter
+operator|.
+name|supportsGeneratedKeysForBatchInserts
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertSame
+argument_list|(
+name|adapter
+operator|.
+name|getBatchTerminator
+argument_list|()
+argument_list|,
+name|autoAdapter
+operator|.
+name|getBatchTerminator
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertSame
+argument_list|(
+name|adapter
+operator|.
+name|getPkGenerator
+argument_list|()
+argument_list|,
+name|autoAdapter
+operator|.
+name|getPkGenerator
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertSame
+argument_list|(
+name|adapter
+operator|.
+name|getQuotingStrategy
+argument_list|()
+argument_list|,
+name|autoAdapter
+operator|.
+name|getQuotingStrategy
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// returns a new instance for each call
+name|assertSame
+argument_list|(
+name|adapter
+operator|.
+name|getSqlTreeProcessor
+argument_list|()
+operator|.
+name|getClass
+argument_list|()
+argument_list|,
+name|autoAdapter
+operator|.
+name|getSqlTreeProcessor
+argument_list|()
+operator|.
+name|getClass
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertSame
+argument_list|(
+name|adapter
+operator|.
+name|getExtendedTypes
+argument_list|()
+argument_list|,
+name|autoAdapter
+operator|.
+name|getExtendedTypes
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertSame
+argument_list|(
+name|adapter
+operator|.
+name|getEjbqlTranslatorFactory
+argument_list|()
+argument_list|,
+name|autoAdapter
+operator|.
+name|getEjbqlTranslatorFactory
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// returns a new instance for each call
+name|assertSame
+argument_list|(
+name|adapter
+operator|.
+name|getSelectTranslator
+argument_list|(
+name|select
+argument_list|,
+name|dataNode
+operator|.
+name|getEntityResolver
+argument_list|()
+argument_list|)
+operator|.
+name|getClass
+argument_list|()
+argument_list|,
+name|autoAdapter
+operator|.
+name|getSelectTranslator
+argument_list|(
+name|select
+argument_list|,
+name|dataNode
+operator|.
+name|getEntityResolver
+argument_list|()
+argument_list|)
+operator|.
+name|getClass
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// reverse engineering related methods
+name|assertEquals
+argument_list|(
+name|adapter
+operator|.
+name|supportsCatalogsOnReverseEngineering
+argument_list|()
+argument_list|,
+name|autoAdapter
+operator|.
+name|supportsCatalogsOnReverseEngineering
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertSame
+argument_list|(
+name|adapter
+operator|.
+name|getSystemCatalogs
+argument_list|()
+argument_list|,
+name|autoAdapter
+operator|.
+name|getSystemCatalogs
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertSame
+argument_list|(
+name|adapter
+operator|.
+name|getSystemSchemas
+argument_list|()
+argument_list|,
+name|autoAdapter
+operator|.
+name|getSystemSchemas
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertSame
+argument_list|(
+name|adapter
+operator|.
+name|tableTypeForTable
+argument_list|()
+argument_list|,
+name|autoAdapter
+operator|.
+name|tableTypeForTable
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertSame
+argument_list|(
+name|adapter
+operator|.
+name|tableTypeForView
+argument_list|()
+argument_list|,
+name|autoAdapter
+operator|.
+name|tableTypeForView
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// db generation related methods
+name|assertEquals
+argument_list|(
+name|adapter
+operator|.
+name|supportsUniqueConstraints
+argument_list|()
+argument_list|,
+name|autoAdapter
+operator|.
+name|supportsUniqueConstraints
 argument_list|()
 argument_list|)
 expr_stmt|;
